--- a/src/css/form.css
+++ b/src/css/form.css
@@ -7,14 +7,14 @@ body {
 
 .feedback-form {
     width: 408px;
+    display: flex;
+    flex-direction: column;
     padding: 24px;
 
     font-weight: 400;
     font-size: 16px;
     letter-spacing: 0.04em;
 
-    display: flex;
-    flex-direction: column;
 }
 
 label {
@@ -23,8 +23,12 @@ label {
     gap: 8px;
 }
 
-label:not(:last-of-type) {
+.label-email {
     margin-bottom: 8px;
+}
+
+.label-message {
+    margin-bottom: 16px;
 }
 
 input {
@@ -69,7 +73,6 @@ button {
 
     width: 95px;
 
-    margin-top: 16px;
     padding: 8px 16px;
 
     border-radius: 8px;
